test/scc/stmt/semantic-errors/039.a
039.t:3:12: error: a break statement may only be used within a loop or switch